@@ -1,3 +1,9 @@
+2012-01-17 03:48-EST Gregory John Casamento <greg.casamento@gmail.com>
+
+	* Source/NSXMLDocument.m
+	* Source/NSXMLNode.m: Add / to xpath if it is not there.
+	Thes matches behavior observed on Mac OS X/Cocoa.
+
 2012-01-17 03:06-EST Gregory John Casamento <greg.casamento@gmail.com>
 
 	* Source/NSXMLDocument.m: Correct issues with unit tests.
